Bug 72037 - LO 4.2: Wizards "Document Converter" and "Euro Converter" not working.
Summary: LO 4.2: Wizards "Document Converter" and "Euro Converter" not working.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: Confirmed:4.2.0.0.beta1:OSX target:4....
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-11-26 14:10 UTC by Gerry
Modified: 2013-12-14 10:45 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerry 2013-11-26 14:10:17 UTC
I just downloaded the LibreOffice 4.2 Beta1 from the LibreOffice website and I realized that the Wizards "Document Converter" and "Euro Converter" do not work at all. Clicking on them has no effect at all. Nothing happens.

System: Version: 4.2.0.0.beta1 from LibreOffice website, Ubuntu 13.04 w. Gnome3, Oracle Java JRE 1.7.0_25

I don't know whether this bug is related to bug 58786. That time, the Document converter did not work due to a packaging problem in the Ubuntu PPA. Maybe related?
Comment 1 Thomas van der Meulen [retired] 2013-11-26 14:20:15 UTC
Thank you for your bug report, I can reproduce this bug running 
Version: 4.2.0.0.beta1
Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7
but also in Version: 4.2.0.0.alpha1
Build ID: c2b9ad37f8a8de9c7dbdd76c86aecf6388107056
OS: Mac osx 10.9.

Seems to be fine in 4.1.3.2
Comment 2 How can I remove my account? 2013-11-26 14:38:26 UTC
Gerry: Just out of interest, do you actually *use* the Euro Converter? Or did you just by coincidence, or to test the beta, want to see whether it works?
Comment 3 Gerry 2013-11-26 15:05:36 UTC
@Tor: Thanks for the question :) I use the document converter from time to time. I don't use the Euro converter at all, but I tested all wizards after realizing that the document converter does not work. All other wizards seem to work. 

With regards to the Euro converter, there was a discussion in the related bug entry to remove it, but then there was the point that new countries have been joining the Euro zone and it is of use for them.
Comment 4 Jorendc 2013-11-26 16:27:12 UTC
(In reply to comment #2)
> Gerry: Just out of interest, do you actually *use* the Euro Converter? Or
> did you just by coincidence, or to test the beta, want to see whether it
> works?

I had the same issue later today, to confirm a bug. So people actually use this features (especially the Document convert wizard).

Kind regards,
Joren
Comment 5 Julien Nabet 2013-11-26 20:24:31 UTC
On pc Debian x86-64 with master sources updated today, I can reproduce this.

No specific console logs when I click on these items.
I noticed that the 2 elements which don't work are those which use "macro" protocol (see http://opengrok.libreoffice.org/xref/core/officecfg/registry/data/org/openoffice/Office/Common.xcu#458)
Comment 6 Robinson Tryon (qubit) 2013-11-30 16:39:50 UTC
Add repro note to whiteboard.
Comment 7 Commit Notification 2013-12-10 10:55:49 UTC
Matuš Kukan committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=088756cb2d67442f7d422ca064ab1dcdb410411f

fdo#72037: Fix comparison of indexOf values after string conversion.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Matúš Kukan 2013-12-10 10:57:06 UTC
> I noticed that the 2 elements which don't work are those which use "macro"
> protocol (see
> http://opengrok.libreoffice.org/xref/core/officecfg/registry/data/org/
> openoffice/Office/Common.xcu#458)

Indeed, great hint, thanks.
Comment 9 Commit Notification 2013-12-10 10:59:32 UTC
Matuš Kukan committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8af7f174bdd38d38e386901c76d63b65c4ce9f09&h=libreoffice-4-2

fdo#72037: Fix comparison of indexOf values after string conversion.


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Matúš Kukan 2013-12-14 10:45:29 UTC
Marking as fixed.